ref #114: Adicionado 3 paineis em modo SPA.

--- a/resources/assets/js/perfil/perfil.html
+++ b/resources/assets/js/perfil/perfil.html
@@ -1,1 +1,26 @@
-<div>Testing Perfil with Template!</div>
+<div class="profile bs-wp">
+    <div class="header">
+        DADOS DE CONTA
+        <i onclick="page('/');" class="fa fa-times"></i>
+        <span class="user_id">ID: {{userId}}</span>
+    </div>
+    <div class="top-nav">
+        <a class="btn brand-trans small sel" href="/perfil">PERFIL</a>
+        <a class="btn brand-trans small" href="/banco/saldo">BANCO</a>
+        <a class="btn brand-trans small" href="/promocoes">BÓNUS</a>
+        <a class="btn brand-trans small" href="/historico">HISTÓRICO</a>
+        <a class="btn brand-trans big" href="/comunicacao/definicoes">COMUNICAÇÃO</a>
+        <a class="btn brand-trans big" href="/jogo-responsavel/limites">JOGO RESPONSÁVEL</a>
+    </div>
+    <div class="profile-sidebar">
+        TODO colocar aqui varios
+    </div>
+    <div class="profile-content" style="overflow:auto;">
+        <div class="loading"><i class="fa fa-spin fa-spinner"></i></div>
+    </div>
+    <div class="profile-footer">
+        <div class="line">
+            <div class="left-side"></div>
+        </div>
+    </div>
+</div>
