--- a/resources/assets/js/perfil/perfil.html
+++ b/resources/assets/js/perfil/perfil.html
@@ -6,11 +6,11 @@
     </div>
     <div class="top-nav">
         <a class="btn brand-trans small sel" href="/perfil">PERFIL</a>
-        <a class="btn brand-trans small" href="/banco/saldo">BANCO</a>
-        <a class="btn brand-trans small" href="/promocoes">BÓNUS</a>
-        <a class="btn brand-trans small" href="/historico">HISTÓRICO</a>
-        <a class="btn brand-trans big" href="/comunicacao/definicoes">COMUNICAÇÃO</a>
-        <a class="btn brand-trans big" href="/jogo-responsavel/limites">JOGO RESPONSÁVEL</a>
+        <a class="btn brand-trans small" href="/perfil/banco/saldo">BANCO</a>
+        <a class="btn brand-trans small" href="/perfil/bonus/porusar">BÓNUS</a>
+        <a class="btn brand-trans small" href="/perfil/historico">HISTÓRICO</a>
+        <a class="btn brand-trans big" href="/perfil/comunicacao/definicoes">COMUNICAÇÃO</a>
+        <a class="btn brand-trans big" href="/perfil/jogo-responsavel/limites">JOGO RESPONSÁVEL</a>
     </div>
     <div class="profile-sidebar">
         TODO colocar aqui varios
