--- a/resources/assets/js/perfil/perfil.html
+++ b/resources/assets/js/perfil/perfil.html
@@ -5,12 +5,9 @@
         <span class="user_id">ID: {{userId}}</span>
     </div>
     <div class="top-nav">
-        <a class="btn brand-trans small sel" href="/perfil">PERFIL</a>
-        <a class="btn brand-trans small" href="/perfil/banco/saldo">BANCO</a>
-        <a class="btn brand-trans small" href="/perfil/bonus/porusar">BÓNUS</a>
-        <a class="btn brand-trans small" href="/perfil/historico">HISTÓRICO</a>
-        <a class="btn brand-trans big" href="/perfil/comunicacao/definicoes">COMUNICAÇÃO</a>
-        <a class="btn brand-trans big" href="/perfil/jogo-responsavel/limites">JOGO RESPONSÁVEL</a>
+        {{#each menus}}
+        <a class="btn brand-trans {{size}} {{#if_eq @key ../options.page}}sel{{/if_eq}}" href="/perfil{{link}}">{{name}}</a>
+        {{/each}}
     </div>
     <div class="profile-sidebar">
         TODO colocar aqui varios
