ref #114: Fix user id.

--- a/resources/assets/js/perfil/perfil.html
+++ b/resources/assets/js/perfil/perfil.html
@@ -2,7 +2,7 @@
     <div class="header">
         DADOS DE CONTA
         <i onclick="page('/');" class="fa fa-times"></i>
-        <span class="user_id">ID: {{userId}}</span>
+        <span class="user_id">ID: {{options.userId}}</span>
     </div>
     <div class="top-nav">
         {{#each menus}}
