ref #172: use new icons

--- a/resources/assets/js/register/register.html
+++ b/resources/assets/js/register/register.html
@@ -1,7 +1,7 @@
 <div class="register">
     <div class="title">
         Aguarde por favor!
-        <i id="register-close" class="fa fa-times"></i>
+        <i id="register-close" class="cp-times"></i>
     </div>
     <div class="content">
         <div align="center" style="margin-top:10px">
@@ -12,6 +12,6 @@
                 <li>e</li>
             </ul>
         </div>
-        <div class="loading"><i class="fa fa-spin fa-spinner"></i></div>
+        <div class="loading"><i class="cp-spin cp-cross"></i></div>
     </div>
 </div>
