--- a/resources/assets/js/register/register.html
+++ b/resources/assets/js/register/register.html
@@ -1,7 +1,7 @@
 <div class="register">
     <div class="title">
         Aguarde por favor!
-        <i id="register-close" class="cp-times"></i>
+        <i id="register-close" class="cp-cross"></i>
     </div>
     <div class="content">
         <div align="center" style="margin-top:10px">
