ref #172: set new icon class

--- a/resources/assets/js/perfil/perfil.html
+++ b/resources/assets/js/perfil/perfil.html
@@ -13,7 +13,7 @@
         TODO colocar aqui varios
     </div>
     <div class="profile-content" style="overflow:auto;">
-        <div class="loading"><i class="cp-spin cp-cross"></i></div>
+        <div class="loading"><i class="cp-spin cp-spinner5"></i></div>
     </div>
     <div class="profile-footer">
         <div class="line">
