--- a/resources/assets/js/register/register.html
+++ b/resources/assets/js/register/register.html
@@ -12,6 +12,6 @@
                 <li>e</li>
             </ul>
         </div>
-        <div class="loading"><i class="cp-spin cp-cross"></i></div>
+        <div class="loading"><i class="cp-spin cp-spinner5"></i></div>
     </div>
 </div>
