--- a/resources/assets/js/cookielaw/cookielaw.html
+++ b/resources/assets/js/cookielaw/cookielaw.html
@@ -2,8 +2,7 @@
 <div class="cookie-law">
     <div class="cookie-law-content">
         <div class="cookie-law-text">
-            <span>Este site utiliza cookies para uma experiência mais amigável e segura, ao navegar estará a consentir a sua utilização.</span>
-            <a href="/info/politica_privacidade">Política de Privacidade e Cookies</a>.
+            <span>Este site utiliza cookies para uma experiência mais amigável e segura, ao navegar estará a consentir a sua utilização.<br><a href="/info/politica_privacidade">Política de Privacidade e Cookies.</a></span>
         </div>
         <button class="btn btn-success">OK</button>
     </div>
