--- a/resources/assets/js/perfil/perfil.html
+++ b/resources/assets/js/perfil/perfil.html
@@ -1,7 +1,7 @@
 <div class="profile bs-wp">
     <div class="header">
         DADOS DE CONTA
-        <i onclick="page('/');" class="cp-cross"></i>
+        <i onclick="page.back('/');" class="cp-cross"></i>
         <span class="user_id">ID: {{options.userId}}</span>
     </div>
     <div class="top-nav">
