--- a/resources/assets/js/banners/banner_title.html
+++ b/resources/assets/js/banners/banner_title.html
@@ -1,3 +1,3 @@
-<div style="font-family: 'Exo 2','Open Sans','Droid Sans',sans-serif; font-size: 18px; font-weight: bold; line-height: 46px; margin-bottom: 8px; padding-left: 10px">
+<div style="font-family: 'Exo 2','Open Sans','Droid Sans',sans-serif; font-size: 18px; font-weight: bold; line-height: 46px; margin-bottom: 8px; padding-left: 10px; min-height: 46px;">
     {{message}}
 </div>
